--- a/AutomationFramework/packages.config
+++ b/AutomationFramework/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="NUnit.Console" version="3.9.0" targetFramework="net461" />
@@ -10,4 +11,6 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.4" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
+  <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
