--- a/AutomationFramework/AutomationFramework.csproj
+++ b/AutomationFramework/AutomationFramework.csproj
@@ -44,10 +44,14 @@
     <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Protractor, Version=0.8.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Protractor.0.8.2\lib\net40\Protractor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -58,27 +62,65 @@
     <Reference Include="TechTalk.SpecFlow, Version=2.4.0.0, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
       <HintPath>..\packages\SpecFlow.2.4.0\lib\net45\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.3.0.0\lib\net40\WebDriver.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.3.0.0\lib\net40\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DevTests\Feature\BrowserTest.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BrowserTest.feature</DependentUpon>
+    </Compile>
+    <Compile Include="DevTests\Feature\UtilTests.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UtilTests.feature</DependentUpon>
+    </Compile>
     <Compile Include="DevTests\Feature\WebApiTests.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>WebApiTests.feature</DependentUpon>
     </Compile>
+    <Compile Include="DevTests\Steps\BrowserTestSteps.cs" />
+    <Compile Include="DevTests\Steps\UtilTestsSteps.cs" />
     <Compile Include="DevTests\Steps\WebApiStepDef.cs" />
+    <Compile Include="Online.Behrang\Browser.cs" />
+    <Compile Include="Online.Behrang\ChromeHandler\Chrome.cs" />
+    <Compile Include="Online.Behrang\SupportedBrowsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.Behrang\ApiHandler\ApiContentType.cs" />
     <Compile Include="Util.Behrang\ApiHandler\ApiHeaders.cs" />
     <Compile Include="Util.Behrang\ApiHandler\JsonFormatter.cs" />
     <Compile Include="Util.Behrang\ApiHandler\WebAPI.cs" />
+    <Compile Include="Util.Behrang\EmailHandler\EmailHandler.cs" />
+    <Compile Include="Util.Behrang\FileHandler\FileAndFolderHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DevTests\Feature\BrowserTest.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>BrowserTest.feature.cs</LastGenOutput>
+    </None>
+    <None Include="DevTests\Feature\UtilTests.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>UtilTests.feature.cs</LastGenOutput>
+    </None>
     <None Include="DevTests\Feature\WebApiTests.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>WebApiTests.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
+    <None Include="Resources\ChromeExtensions\Authenticator_v4.18.crx" />
+    <None Include="Resources\ChromeExtensions\XpathHelperWizard_v3.0.24_0.crx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Util.Behrang\ComponentHelper\" />
+    <Folder Include="Util.Behrang\ConfigurationHelper\" />
+    <Folder Include="Util.Behrang\ExcelReader\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
