--- a/AutomationFramework/AutomationFramework.csproj
+++ b/AutomationFramework/AutomationFramework.csproj
@@ -48,6 +48,7 @@
       <HintPath>..\packages\Protractor.0.8.2\lib\net40\Protractor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -96,6 +97,7 @@
     <Compile Include="Util.Behrang\ApiHandler\ApiHeaders.cs" />
     <Compile Include="Util.Behrang\ApiHandler\JsonFormatter.cs" />
     <Compile Include="Util.Behrang\ApiHandler\WebAPI.cs" />
+    <Compile Include="Util.Behrang\ConfigurationHelper\AppConfigHandler.cs" />
     <Compile Include="Util.Behrang\EmailHandler\EmailHandler.cs" />
     <Compile Include="Util.Behrang\FileHandler\FileAndFolderHandler.cs" />
   </ItemGroup>
@@ -118,8 +120,8 @@
     <None Include="Resources\ChromeExtensions\XpathHelperWizard_v3.0.24_0.crx" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Reports\Logs\" />
     <Folder Include="Util.Behrang\ComponentHelper\" />
-    <Folder Include="Util.Behrang\ConfigurationHelper\" />
     <Folder Include="Util.Behrang\ExcelReader\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
