--- a/AutomationFramework/AutomationFramework.csproj
+++ b/AutomationFramework/AutomationFramework.csproj
@@ -44,8 +44,14 @@
     <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Protractor, Version=0.11.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Protractor.0.11.0\lib\net40\Protractor.dll</HintPath>
+    <Reference Include="Protractor, Version=0.12.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Protractor.0.12.0\lib\net40\Protractor.dll</HintPath>
+    </Reference>
+    <Reference Include="SeleniumExtras.PageObjects, Version=3.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetSeleniumExtras.PageObjects.3.11.0\lib\net45\SeleniumExtras.PageObjects.dll</HintPath>
+    </Reference>
+    <Reference Include="SeleniumExtras.WaitHelpers, Version=3.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetSeleniumExtras.WaitHelpers.3.11.0\lib\net45\SeleniumExtras.WaitHelpers.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -91,6 +97,7 @@
     <Compile Include="DevTests\Steps\UtilTestsSteps.cs" />
     <Compile Include="DevTests\Steps\WebApiStepDef.cs" />
     <Compile Include="Online.Behrang\Browser.cs" />
+    <Compile Include="Online.Behrang\BrowserSupport\BrowserExtension.cs" />
     <Compile Include="Online.Behrang\IBrowserHandler.cs" />
     <Compile Include="Online.Behrang\ChromeHandler\Chrome.cs" />
     <Compile Include="Online.Behrang\EdgeHandler\Edge.cs" />
