--- a/AutomationFramework/AutomationFramework.csproj
+++ b/AutomationFramework/AutomationFramework.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.1.0.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.1.0\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -110,7 +113,9 @@
     <Compile Include="Util.Behrang\ApiHandler\WebAPI.cs" />
     <Compile Include="Util.Behrang\ConfigurationHelper\AppConfigHandler.cs" />
     <Compile Include="Util.Behrang\EmailHandler\EmailHandler.cs" />
+    <Compile Include="Util.Behrang\SpreadsheetDataHanler\SpreadSheetInputOutput.cs" />
     <Compile Include="Util.Behrang\FileHandler\FileAndFolderHandler.cs" />
+    <Compile Include="Util.Behrang\ReflectionHandler\ObjectManipulator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
