--- a/AutomationFramework/packages.config
+++ b/AutomationFramework/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net461" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
+  <package id="EPPlus" version="4.1.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
